[gd_scene load_steps=2 format=3 uid="uid://ddm2fw1pp3ebs"]

[ext_resource type="Script" path="res://source/05_UserInterface/_Debuggers/Mode_Debug.gd" id="1_m84xq"]

[node name="Mode_Debug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_m84xq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DEBUG MODE (F3)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="CameraTargetLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Camera Target:"
horizontal_alignment = 2

[node name="CameraTargetOutput" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "TARGET"

[node name="CameraLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Camera Panning:"
horizontal_alignment = 2

[node name="CameraOutput" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "PANNING"

[node name="PositionLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Player Position:"
horizontal_alignment = 2

[node name="PositionOutput" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "POSITION"
uppercase = true

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "State Output:"
horizontal_alignment = 2

[node name="StateOutput" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "STATE"
uppercase = true

[node name="PlayerModeLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Player Mode:"
horizontal_alignment = 2

[node name="PlayerModeOutput" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "MODE"
uppercase = true

[node name="BiomeLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Current Biome:"
horizontal_alignment = 2

[node name="BiomeOutput" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "BIOME"
uppercase = true

[node name="LivesLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Lives Count:"
horizontal_alignment = 2

[node name="LivesOutputs" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "LIVES"
uppercase = true
